# test_rust_jni

./: .gitignore  Makefile  Readme.md
cxx-lib/: CMakeLists.txt  c_lib.cpp
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
src/: Main.java
